--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.3.1.js"></script>
   <script src="js/scripts.js"></script>
-  <title>Deck Generator</title>
+  <title>Work Order</title>
 </head>
 <body>
   <div class="container">
-    <h1>Generate your deck of cards:</h1>
+    <h1>Work Order Form</h1>
     <div>
-        <button type="button" id="deck" class="btn">Generate the Cards!</button>
+      <form id="workOrder">
+        <div class="form-group">
+          <label for="intputText">Input your text below</label>
+          <input id="inputText" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Submit Text!</button>
       </form>
       <div class="output">
         <ul>
